# transcriber-ag

./: GTKSPELL_PLAN.md  README.md  install_dependencies.sh
source/: CMakeLists.txt  install.sh
source/include/: config.h.in  quartz_threads.h
source/libs/: CMakeLists.txt
source/libs/aglib-2.0.1/: CMakeLists.txt
source/libs/aglib-2.0.1/src/ag/: AnnotationIndex.cc  agfio.cc
source/libs/aglib-2.0.1/src/ag/ag/: Hash.h
source/libs/soundtouch-2.3.3/: CMakeLists.txt
source/libs/soundtouch-2.3.3/include/: soundtouch_config.h
source/libs/soundtouch-2.3.3/source/: CMakeLists.txt
source/libs/soundtouch-2.3.3/source/SoundTouch/: CMakeLists.txt
source/po/: CMakeLists.txt
source/src/: CMakeLists.txt
source/src/AudioWidget/: AudioSignalView.cpp
source/src/Common/: Explorer_utils.cpp  globals.h
source/src/Common/widgets/: ComboEntry_mod.cpp  GtUtil.cpp  ToolLauncher.cpp
source/src/DataModel/: DataModel_IO.cpp
source/src/Editors/: CMakeLists.txt
source/src/Editors/AnnotationEditor/: Anchors.cpp  AnnotationBuffer.cpp  AnnotationBuffer.h  AnnotationEditor.cpp  AnnotationEditor.h  AnnotationView.cpp  AnnotationView.h  UndoableTextView.cpp
source/src/Editors/AnnotationEditor/menus/: AnnotationMenu.cpp
source/src/Editors/AnnotationEditor/renderers/: SectionRenderer.cpp
source/src/Editors/CommonEditor/: AGEditor.h
source/src/Formats/CHAT/: CHATParser.cpp
source/src/Formats/LBL/: LBL.cpp
source/src/Formats/SGML/: SGML.cpp
source/src/Formats/STM/: STMParser.cpp
source/src/Formats/TXT/: TXTParser.cpp
source/src/Formats/VRXML/: VRXML.cpp
source/src/GUI/: CMakeLists.txt  GuiWidget.cpp  mac_activate.m  main.cpp  msgErr.cpp
source/src/GUI/Dialogs/: CMakeLists.txt
source/src/MediaComponent/base/: Types.h
source/src/MediaComponent/io/: FFMpegHandler.cpp  FFMpegHandler.h
source/src/MediaComponent/rtsp/: BufferSink.cpp
source/src/MediaComponent/video/: VideoWriter.cpp  VideoWriter.h
source/src/VideoComponent/FrameBrowser/: FrameBrowser.cpp
